Pessoas.Api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-pessoa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-pessoa
  template:
    metadata:
      labels:
        app: api-pessoa
    spec:
      containers:
      - name: api-pessoa
        image: emmanuel84/pessoas:7.0
        ports:
        - containerPort: 80
