Pessoas.Api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-pessoa
  labels:
    version: test
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: api-pessoa
