Pessoas.Api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /pessoas(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-pessoa
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: api-pessoa
            port:
              number: 80
